crates/batchalign-app/tests/snapshots/golden__compare_eng.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 596
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	the big dog is running .
%mor:	det|the-Def-Art adj|big-S1 noun|dog aux|be-Fin-Ind-Pres-S3 verb|run-Part-Pres-S .
%gra:	1|3|DET 2|3|AMOD 3|5|NSUBJ 4|5|AUX 5|0|ROOT 6|5|PUNCT
%xsrep:	the [+ main]big dog is running [- gold]quickly
*PAR:	I like cats .
%mor:	pron|I-Prs-Nom-S1 verb|like-Fin-Ind-Pres-S1 noun|cat-Plur-Acc .
%gra:	1|2|NSUBJ 2|0|ROOT 3|2|OBJ 4|2|PUNCT
%xsrep:	i like cats
@End
