crates/batchalign-app/tests/snapshots/golden__morphotag_eng_simple.snap
---
source: crates/batchalign-server/tests/golden.rs
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	hello world .
%mor:	intj|hello noun|world .
%gra:	1|2|DISCOURSE 2|0|ROOT 3|2|PUNCT
@End
