crates/batchalign-app/tests/snapshots/golden__utseg_eng_multi_utt.snap
---
source: crates/batchalign-app/tests/golden.rs
assertion_line: 405
expression: output
---
@UTF8
@Begin
@Languages:	eng
@Participants:	PAR Participant
@ID:	eng|test|PAR|||||Participant|||
*PAR:	the dog is running .
*PAR:	I like cats .
*PAR:	she went to the store .
@End
